feat: security hardening, Docker, pagination, refresh tokens, audit logging, error boundary
Phase 0 - Security Hardening:
  - IP-based rate limiting filter (20/min auth, 60/min general)
  - SanitizationFilter strips HTML tags from JSON (XSS prevention)
  - Typed LoginRequest/SignupRequest DTOs with @Valid annotations
  - Security response headers (X-Content-Type-Options, X-Frame-Options)
  - ApiExceptionHandler: malformed JSON handler + generic catch-all
  - application.yaml: disable error message/stacktrace leakage

Phase 1 - Safe Additive Changes:
  - Docker Compose (postgres + backend + frontend) + Dockerfiles
  - React ErrorBoundary wrapping all routes
  - Skeleton loading CSS for Dashboard

Phase 2 - Backend Enhancements:
  - AuditLog entity, repository, service, controller
  - Audit logging wired into AdminUserServiceImpl
  - Pagination on all list endpoints (members, trainers, payments, attendance)

Phase 3 - Auth Enhancements:
  - RefreshToken entity + repository + service
  - POST /api/auth/refresh for token renewal
  - POST /api/auth/reset-password (admin-only)
  - Frontend auto-refresh token on 401 in api.js

Phase 4 - API Polish:
  - ApiResponse generic wrapper DTO
  - Pagination CSS and controls in frontend

All frontend pages updated to handle paginated responses.